CREATE TABLE IF NOT EXISTS users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username VARCHAR(50) NOT NULL,
    password VARCHAR(255) NOT NULL
);

CREATE UNIQUE INDEX IF NOT EXISTS uk_users_username ON users (username);

CREATE TABLE IF NOT EXISTS user_roles (
    user_id BIGINT NOT NULL,
    role VARCHAR(50) NOT NULL
);

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'fk_user_roles_user_id'
    ) THEN
        ALTER TABLE user_roles
            ADD CONSTRAINT fk_user_roles_user_id
            FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE;
    END IF;
END
$$;

CREATE TABLE IF NOT EXISTS photos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    original_file_name VARCHAR(255) NOT NULL,
    stored_file_name VARCHAR(255) NOT NULL,
    uploaded_at TIMESTAMP(6) WITH TIME ZONE NOT NULL,
    uploaded_by BIGINT NOT NULL
);

CREATE UNIQUE INDEX IF NOT EXISTS uk_photos_stored_file_name ON photos (stored_file_name);

DO $$
BEGIN
    IF NOT EXISTS (
        SELECT 1
        FROM pg_constraint
        WHERE conname = 'fk_photos_uploaded_by'
    ) THEN
        ALTER TABLE photos
            ADD CONSTRAINT fk_photos_uploaded_by
            FOREIGN KEY (uploaded_by) REFERENCES users (id);
    END IF;
END
$$;

CREATE INDEX IF NOT EXISTS idx_photos_uploaded_by ON photos (uploaded_by);
CREATE INDEX IF NOT EXISTS idx_photos_uploaded_at ON photos (uploaded_at DESC);
